# wiremind

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  start.sh
wireframe-backend/Wireframe-Generator/: .env  Dockerfile  README.md  docker-compose.yml  fix_prompt.py  requirements.txt
wireframe-backend/Wireframe-Generator/app/: config.py  main.py
wireframe-backend/Wireframe-Generator/app/api/: __init__.py  dependencies.py
wireframe-backend/Wireframe-Generator/app/api/endpoints/: image_conversion.py  wireframe.py
wireframe-backend/Wireframe-Generator/app/models/: wireframe.py
wireframe-backend/Wireframe-Generator/app/services/wireframe/: __init__.py  agents.py  graph.py
wireframe-backend/Wireframe-Generator/app/utils/: image_processor.py  text_processing.py
wireframe-frontend/: package-lock.json  package.json  vite.config.ts
wireframe-frontend/src/: App.tsx  index.css
wireframe-frontend/src/api/: wireframeApi.ts
wireframe-frontend/src/components/: CodeDisplay.tsx  LandingPage.tsx  SvgRenderer.tsx  WireframeGenerator.tsx
wireframe-frontend/src/types/: types.ts
